# datafusion-go

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  arrow.go  bench_test.go  connection.go  datafusion.go  datafusion_nocgo_test.go  datafusion_test.go  doc.go  errors.go  exec.go  ffi_table_provider.go  ffi_table_provider_test.go  go.mod  go.sum  parameters.go  result.go  rows.go  statement.go  test_helpers_test.go  version.go  versions.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/arrow/: main.go
examples/parameters/: main.go
examples/simple/: main.go
internal/native/: dynamic_loader.h  library.go  link_bundled_darwin_amd64.go  link_bundled_darwin_arm64.go  link_bundled_linux_amd64.go  link_bundled_linux_arm64.go  link_bundled_windows_amd64.go  link_shared.go  link_source.go  link_static.go  link_unsupported.go  native.go  native_nocgo.go  native_test.go  parameters.go  version_generated.go
internal/native/lib/: SHA256SUMS
internal/tools/genversions/: main.go
rust/: Cargo.toml
rust/include/: datafusion_go.h
rust/src/: generated.rs  lib.rs
