[package]
name = "datafusion-go"
version = "0.530100.2"
edition = "2024"
rust-version = "1.88"

[lib]
name = "datafusion_go"
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
arrow = { version = "58", features = ["ffi"] }
datafusion = "=53.1.0"
datafusion-ffi = "=53.1.0"
datafusion-sql = "=53.1.0"
futures = "0.3"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync"] }
url = "2.5"
